# codex-telegram

./: .gitignore  AGENTS.md  MANIFEST.in  Makefile  README.md  README_WEB.md  TELEGRAM.md  WEB.md  conf.toml  conf.toml.example  main.py  pyproject.toml  requirements.txt  run_build_and_main.sh
app_runtime/: __init__.py  bootstrap.py  telegram_app.py  web_server.py
bot/: __init__.py  callbacks.py  features_ui.py  guardian_ui.py  handlers.py  keyboard.py  projects_ui.py  reviewer_ui.py  skills_ui.py  thread_ui.py
codex/: __init__.py  approval_flow.py  approval_guardian.py  client.py  client_pool.py  collaboration_mode.py  commands.py  event_forwarding.py  events.py  protocol.py  result_verifier.py
codex/command_router/: __init__.py  common.py  context.py  contracts.py  core.py  projects.py  review.py  system.py  threads.py
codex_telegram/: __init__.py  cli.py
docs/: DESIGN.md  TELEGRAM_BOT_SETUP.md  web-rearchitecture-log.md
docs/plans/: 20260309-verifier-agent-design.md  20260315-guardian-approval-policy-rules.md  20260315-guardian-web-rule-config.md  20260318-apply-patch-web-telegram-forwarding.md  20260318-web-chat-threadid-display.md  20260321-thread-tab-multi-session.md  20260321-web-multi-project-thread-tabs-notification.md  20260322-web-thread-workspace-layout.md  20260508-web-lightweight-rearchitecture-plan.md  20260508-web-refactor-execution-checklist.md
models/: __init__.py  state.py  thread.py  user.py
tests/: test_approval_guardian.py  test_approval_policy.py  test_bootstrap_update_check.py  test_callbacks_results.py  test_cli_entrypoint.py  test_codex_client.py  test_codex_client_pool.py  test_command_router.py  test_guardian_config.py  test_handlers_results.py  test_keyboard.py  test_main_approval_flow.py  test_main_reviewer_flow.py  test_normalize.py  test_pypi_check.py  test_result_verifier.py  test_reviewer_config.py  test_single_instance.py  test_telegram_bot_config.py  test_thread_history.py  test_web_runtime.py  test_web_server_local_command.py  test_workspace_review.py
utils/: __init__.py  approval_policy.py  config.py  local_command.py  logger.py  normalize.py  pypi_check.py  single_instance.py  web_config.py  workspace_review.py
web/: __init__.py  dependencies.py  routes.py  runtime.py  server.py  thread_history.py  workspace.py
web/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
web/frontend/scripts/: run-tests.mjs
web/frontend/src/: App.jsx  main.tsx  styles.css  vite-env.d.ts
web/frontend/src/app/: AppShell.tsx
web/frontend/src/app/bootstrap/: renderApp.tsx
web/frontend/src/features/app/: AuthenticatedApp.jsx  AuthenticatedApp.tsx  projectTabThreads.js  projectTabThreads.test.js  turnCompletion.test.js
web/frontend/src/features/common/: api.js  constants.js  theme.ts  utils.js  utils.ts
web/static/: app.jsx  index.html  styles.css
(+68 files in other folders)
