[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-telegram"
dynamic = ["version"]
description = "Bridge for controlling the Codex App Server from Telegram and Web UI"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "heungtae" }
]
dependencies = [
  "python-telegram-bot>=20.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/heungtae/codex-telegram"
Repository = "https://github.com/heungtae/codex-telegram"
Issues = "https://github.com/heungtae/codex-telegram/issues"

[project.scripts]
codex-telegram = "codex_telegram.cli:main"

[tool.setuptools]
py-modules = ["main"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "codex_telegram.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["app_runtime", "bot", "codex", "codex.*", "codex_telegram", "models", "utils", "web"]
exclude = ["tests*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["codex_source", "web/frontend", "node_modules"]
